# Job_Hunter

./: .gitignore  README.md  completed.md  context.md  project_overview.md  skills.md
backend/: pyproject.toml  scratch_scraper.py  seed.py  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 05c0fc360ec9_add_unique_constraint_source_external_.py  1f9dab03cc1e_add_application_tracks_table.py  36cca6f0a8f1_add_jsonb_columns_and_userdocument.py  3bc4ada9674e_add_interview_models.py  68ff4a0f29fc_add_notificationsettings_and_vector_.py  7e5e2e0f82a3_initial_schema.py  91728d1fd3a8_fix_unique_constraint_on_application_.py  d82150a871ad_use_object_key_instead_of_file_data.py  d91a819e42b3_add_auto_apply_fields.py  fb6029598050_update_job_embedding_vector_size_to_768.py
backend/app/: main.py
backend/app/agents/: llm_scorer.py  orchestrator.py  resume_optimizer.py
backend/app/api/: deps.py
backend/app/api/endpoints/: analytics.py  applications.py  interview.py  jobs.py  notifications.py  resume.py  users.py
backend/app/core/: celery_app.py  config.py  llm.py
backend/app/db/: session.py
backend/app/models/: __init__.py  application.py  interview.py  job.py  user.py
backend/app/schemas/: jobs.py
backend/app/scrapers/: glassdoor.py  indeed.py  linkedin.py  remotive.py  wellfound.py
backend/app/services/: auto_apply.py  dedup.py  email_agent.py  notifications.py  scheduler.py
backend/app/utils/: http.py  s3_mock.py
backend/app/workers/: tasks.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  JobCard.tsx  ScoreBar.tsx
frontend/src/components/3d/: Visualizations.tsx
frontend/src/components/tabs/: AnalyticsTab.tsx  InterviewTab.tsx  MatchesTab.tsx  PipelineTab.tsx  PreferencesTab.tsx
frontend/src/components/ui/: SectionCard.tsx  TagInput.tsx  Toggle.tsx
frontend/src/types/: index.ts
