[project]
name = "job-hunt-backend"
version = "0.1.0"
description = "Job Hunt AI Backend"
authors = [
    {name = "Antigravity"}
]
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "httpx",
    "beautifulsoup4",
    "langchain-core (>=1.4.2,<2.0.0)",
    "langgraph (>=1.2.4,<2.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "google-genai (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
